--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,13 @@ dist
 __pycache__/
 *.py[cod]
 
+# Site media and builded statics
+/var/
+/sandbox/static
+
+# Settings
+localsettings.py
+
 # Unit test / coverage reports
 htmlcov/
 .coverage
