--- a/setup.cfg
+++ b/setup.cfg
@@ -65,6 +65,7 @@ exclude =
     */migrations/*
 
 [tool:pytest]
+DJANGO_SETTINGS_MODULE = sandbox.settings.tests
 addopts = -vv
 python_files =
     *.py
