Added an author Added install_requires Corrected Django to >= 2.2

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,9 @@ version = 0.1.0
 description = A Django app to create Vcard page reachable from a QR Code
 long_description = file:README.rst
 long_description_content_type = text/x-rst
-author = David Thenon
+author = 
+    David Thenon
+    Samy Saad
 author_email = support@emencia.com
 url = https://github.com/emencia/django-qr-vcard
 license = MIT
@@ -20,13 +22,18 @@ classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
     Framework :: Django
-    Framework :: Django :: 2.1
     Framework :: Django :: 2.2
 
 [options]
 include_package_data = True
 install_requires =
-    Django>=2.1
+    Django>=2.2
+    segno>=1.3.1
+    requests>=2.22.0
+    Pillow>=7.2.0
+    Jinja2>=2.11.2
+
+    
 packages = find:
 zip_safe = True
 
@@ -79,7 +86,7 @@ envlist = py35-django{21,22}-cms
 [testenv]
 
 deps =
-    django21: Django>=2.1,<2.2
+;;    django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
 
 commands =
